--- a/22-10-24/formatting.html
+++ b/22-10-24/formatting.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-        <b>This is a bold text</b><br>
+        <b>This is a bold text1111111111</b><br>
         <strong>This is strong text used to show important Text</strong><br>
         <i>This is italics text</i><br>
         <em>This is an emphasized text</em><br>
